--- a/css/box-model.css
+++ b/css/box-model.css
@@ -145,4 +145,25 @@ hidden: Oculta el elemento, pero conserva el espacio que este ocupa.
 }
 
 
+/* -----------------------------PROPIEDAD OVERFLOW--------------------------------- */
+
+.overflow {
+    background-color: darkturquoise;
+    width: 200px;
+    height: 100px;
+    /* overflow: visible;
+    overflow: hidden;
+    overflow: scroll;
+    overflow: auto; */
+    /* overflow-y: scroll; */
+    overflow-x: scroll;
+}
+
+
+
+
+
+
+
+
 
