--- a/css/box-model.css
+++ b/css/box-model.css
@@ -43,7 +43,8 @@ a{
     border-style: solid;
 }
 
-/* --------------------------------------------------------------------------------------- */
+
+/* ------------------DE AQUÏ EN ADELANTE COMIENZAN LOS EJERCICIOS------------------------- */
 
 .ejemplo2 {
     width: 400px;
