--- a/css/positions.css
+++ b/css/positions.css
@@ -28,3 +28,110 @@ h2 {
 a {
     text-decoration: none;
 }
+
+
+/* ------------------DE AQUÏ EN ADELANTE COMIENZAN LOS EJERCICIOS------------------------- */
+
+
+/* ---------------------------------Posicionamiento static------------------------------ */
+
+.static {
+    background-color: yellow;
+    position: static;
+    top: 10px;
+    left: 10px;
+}
+
+
+/* ---------------------------------Posicionamiento relative------------------------------ */
+
+.relative {
+    background-color: turquoise;
+    position: relative;
+    width: 300px;
+    height: 50px;
+    /* top: 50px; */ /* Del margen superior (top) se va a alejar 50px, es decir se mueve hacia abajo (bottom) */
+    /* left: 50px; */ /* Del margen de la izquierda (left) se va a alejar 50px, es decir se mueve hacia la derecha (right) */
+    /* bottom: 50px; */ /* Del margen inferior (bottom) se va a alejar 50px, es decir se mueve hacia arriba (top) */
+    /* right: 50px; */ /* Del margen de la derecha (right) se va a alejar 50px, es decir se mueve hacia la izquierda (left) */
+    /* top: -30px;
+    left: -10px;
+    top: 300px;
+    left: 50px; */
+}
+
+
+/* ---------------------------------Posicionamiento absolute------------------------------ */
+
+.absolute {
+    background-color: tomato;
+    /* position: absolute; */
+    width: 200px;
+    height: 50px;
+    /* top: 0;
+    left: 0; */
+    /* top: 100px;
+    left: 100px; */
+    right: 0️;
+    bottom: 0;
+}
+
+.relative-parent {
+    background-color: khaki;
+    position: relative;
+    width: 600px;
+    height: 50px;
+    /* top: 50px;
+    left: 50px; */
+}
+
+.absolute-child {
+    background-color: lightcoral;
+    position: absolute;
+    /* left: 0;
+    top: 0; */
+    /* top: -50px;
+    left: -30px; */
+}
+
+
+/* -----------------------------Posicionamiento fijo (fixed)------------------------------ */
+
+
+.fixed {
+    background-color: lightgreen;
+    /* position: fixed; */
+    width: 300px;
+    height: 100px;
+    /* right: 20px;
+    bottom: 10px; */
+    top: 80px;
+    left: 600px;
+}
+
+
+/* -----------------------------Posicionamiento sticky o pegajoso------------------------- */
+
+
+.sticky {
+    background-color: lightskyblue;
+    /* position: sticky; */
+    bottom: 50px;
+}
+.sticky-parent{
+    border: thin dashed black;
+    height: 600px;
+}
+
+.sticky-child {
+    background-color: lightslategray;
+    position: sticky;
+    bottom: 75px;
+}
+
+
+/* -----------------------------Posicionamiento z-index------------------------- */
+
+
+
+
