--- a/css/positions.css
+++ b/css/positions.css
@@ -132,6 +132,51 @@ a {
 
 /* -----------------------------Posicionamiento z-index------------------------- */
 
+.z-index-1,
+.z-index-2 {
+    background-color: mediumaquamarine;
+    border: thin solid black;
+    position: relative;
+    width: 200px;
+    height: 200px;
+}
+
+.z-index-1 {
+    z-index: 1;
+    z-index: 0;
+}
+
+.z-index-2 {
+    top: -200px;
+    left: 100px;
+    z-index: 2;
+    z-index: -1;
+}
+
+.z-index-parent {
+    background-color: mediumorchid;
+    width: 300px;
+    height: 300px;
+    position: relative;
+    /* z-index: 2; */
+}
+
+.z-index-child {
+    background-color: mediumvioletred;
+    position: relative;
+    width: 150px;
+    height: 150px;
+    top: -75px;
+    left: 75px;
+    z-index: -1;
+}
+
+
+
+
+
+
+
 
 
 
