--- a/css/positions-examples.css
+++ b/css/positions-examples.css
@@ -33,4 +33,98 @@ a {
 /* -------------------Ejercicios practicos de posicionamiento en css------------------ */
 
 
-/* -----------------------------Cabecera fixed Vs Cabecera sticky--------------------- */
+/* -------------------Cabecera fija (fixed) Vs Cabecera pegajosa (sticky)----------------- */
+
+body {
+    margin: 0;
+    /* padding-top: 20px; */
+}
+
+.header {
+    background-color: darkcyan;
+    width: 100%;
+    height: 30px;
+}
+
+.fixed-top {
+    position: fixed;
+    top: 0;
+}
+
+.sticky-top {
+    position: sticky;
+    top: 0;
+}
+
+.hero-images {
+    background-color: palegoldenrod;
+    width: 100%;
+    height: 100vh; /* 100vh es el tamaño total del viewpor en altura (height) */
+}
+
+
+/* --------------------------Efecto de slides con position sticky------------------------- */
+
+.slide {
+    background-color: paleturquoise;
+    width: 100%;
+    height: 100vh; /* 100vh es el tamaño total del viewpor en altura (height) */
+}
+
+.slide:nth-child(odd){
+    background-color: palevioletred;
+}
+
+.slide-title {
+    background-color: palegreen;
+    padding: 16px;
+    text-align: center;
+    font-weight: bold;
+    position: sticky;
+    top: 30px;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+
+/* ---------------------Ventana Modal / Menú Móvil con posicionamiento fixed-------------- */
+
+.modal-window {
+    background-color: black;
+    color: white;
+    position: fixed;
+
+    /* Al poner los valores top, bottom, left y right a cero el contenido se posiciona sobre toda la pantalla. */
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    
+    opacity: 0.85; /* opacity es para dar opacida al color, que en este caso es black */
+    display: none;
+}
+
+
+.modal-window:target {
+    display: block;
+}
+
+.modal-quit {
+    background-color: darkblue;
+    color: white;
+    font-size: 25px;
+    padding: 10px;
+    border: medium solid white;
+    margin-left: 40%;
+}
+
+.modal-link {
+    background-color: darkblue;
+    color: white;
+    font-size: 25px;
+    padding: 10px;
+    border: medium solid orange;
+    margin-left: 20px;
+}
+
+
