--- a/css/colors.css
+++ b/css/colors.css
@@ -42,8 +42,90 @@ a {
 }
 
 
-/* ------------------------------Sistema Hexadecimal--------------------------------- */
+/* -----------------------------Sistema de colores Hexadecimal--------------------------- */
 
+/* El sistema hexadecimal de colores tiene que ver con el sistema RGB (Red, Green, Blue) de colores para medios digitales */ 
+.color-hex {
+    background-color: #f60;
+    background-color: #ff6605;
+    background-color: #00000055; /* Opcaidad del 55% */
+    background-color: #0003;
+    color: #12ac78;
+    border: thick solid #ffffff;
+    border: thick solid #fff;
+    border: thick solid #ff0000;
+    border: thick solid #f00;
+    border: thick solid #000000;
+    border: thick solid #000;
+    border: thick solid #00ff00;
+    border: thick solid #0f0;
+    border: thick solid #0000ff;
+    border: thick solid #00f;
+}
+
+
+/* ---------------------------------Sistema de colores RGB------------------------------- */
+
+.color-rgb {
+    background-color: rgb(255, 255, 255);
+    background-color: rgb(255, 0, 0);
+    background-color: rgb(0, 255, 0);
+    background-color: rgb(0, 0, 255);
+    background-color: rgba(0, 0, 0, .33); /* El .33 seria opacidad al 33%. */
+    color: rgb(255, 102,0);
+    border: thick solid rgb(128, 109, 7);
+}
+
+
+/* ---------------------------------Sistema de colores HSL------------------------------- */
+
+.color-hsl {
+    background-color: hsl(0, 100%, 50%);
+    background-color: hsl(120, 100%, 50%);
+    background-color: hsl(240, 100%, 50%);
+    background-color: hsl(30, 100%, 50%);
+    background-color: hsl(30, 100%, 50%, .75);
+    color: hsl(0, 0%, 0%);
+    color: hsl(0, 0%, 100%);
+    border: thick solid hsl(210, 75%, 65%);
+}
+
+
+/* -------------------------------Transparent & currentColor----------------------------- */
+
+.color-transparent-current{
+    background-color: darkmagenta;
+    background-color: currentColor;
+    background-color: transparent; /* Para quitar el color a un elemento */
+    color: olive;
+    border: thick solid currentColor;
+}
+
+
+/* ---------------------------------Propiedad opacity------------------------------------ */
+
+.opacity{
+    background-color: orchid;
+    color: navy;
+    border: thick solid black;
+    opacity: 0.5;
+}
+
+.opacity-00{
+    opacity: 0;
+}
+
+.opacity-10 {
+    opacity: .1;
+}
+
+.opacity-20 {
+    opacity: .2;
+}
+
+.opacity-30 {
+    opacity: .3;
+}
 
 
 
