--- a/css/positions-examples.css
+++ b/css/positions-examples.css
@@ -11,6 +11,8 @@ html {
     box-sizing: inherit;
 }
 
+/* -------------------------------------------------------------------------------------- */
+
 h1 {
     color: yellow;
     background-color: black;
