--- a/css/positions.css
+++ b/css/positions.css
@@ -11,6 +11,8 @@ html {
     box-sizing: inherit;
 }
 
+/* -------------------------------------------------------------------------------------- */
+
 body {
     margin: 0;
 }
