--- a/css/border-outline.css
+++ b/css/border-outline.css
@@ -37,4 +37,56 @@ a {
     text-decoration: none;
 }
 
-/* -------------------------  ---------------------------- */
+
+/* ----------------------------------Bordes y outlines----------------------------------- */
+
+/* ----------------------------Propiedad border-radius-------------------------------- */
+
+.box {
+    background-color: black;
+    margin: 2rem auto;
+    width: 400px;
+    height: 400px;
+    border: thick solid red;
+}
+
+/* Borde circular */
+.border-radius {
+    border-radius: 2rem;
+    border-top-left-radius: 4rem;
+    border-top-right-radius: 4rem;
+    border-bottom-right-radius: 4rem;
+    border-bottom-left-radius: 4rem;
+    border-radius: 2rem 4rem;
+    border-radius: 2rem 4rem 0;
+    border-radius: 4rem 3rem 2rem 1rem;
+    border-radius: 2rem;
+}
+
+/* Borde eliptico */
+.border-radius-2 {
+    border-radius: 2rem / 4rem; /* Con el slash "/" los bordes pasan a ser elipticos y no redondeados*/
+    border-radius: 2rem 4rem / 4rem 8rem;/* radios en ele eje X / radios en el eje Y */
+}
+
+.border-radius-3 {
+    border-radius: 50%; /* Con el valor de 50% generamos un circulo perfecto */
+}
+
+.border-radius-4 {
+    width: 400px;
+    height: 200px;
+    border-radius: 50%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
