--- a/css/tables.css
+++ b/css/tables.css
@@ -52,4 +52,20 @@ img {
 /* -------------------------------------------------------------------------------------- */
 
 
-/* -----------------------------  -------------------------------- */
+/* -----------------------------Aplicar estilos a las tablas-------------------------------- */
+
+.table {
+    font-size: 3rem;
+    border-collapse: collapse; /* Dibuja las cuadciculas de la tablas con una sola línea sin espacios */
+    border-collapse: separate; /* El valor por defeto de la propiedad border-collapse es separate  */
+    empty-cells: hide;
+    empty-cells: show; /* El valor por de fecto de la propiedad empty-cells es show */
+}
+
+table, 
+th, 
+td {
+    border: medium solid black;
+    border-spacing: 1rem;
+    border-spacing: 0;
+}
