--- a/css/scroll-snap-slides.css
+++ b/css/scroll-snap-slides.css
@@ -17,6 +17,14 @@ html {
     box-sizing: inherit;
 }
 
+/* -------------------------------------------------------------------------------------- */
+a {
+    text-decoration: none;
+}
+
+
+/* -------------------------------------------------------------------------------------- */
+
 body {
     margin: 0;
 }
